# bot-base

./: README.md  pyproject.toml
bot_base/core/: __init__.py  app.py  app_config.py  telegram_bot.py
bot_base/data_model/: mongo_utils.py
bot_base/utils/: __init__.py  audio_utils.py  gpt_utils.py  logging_utils.py  telegram_utils.py  text_utils.py
tests/: test_app.py  test_app_config.py  test_imports.py  test_text_utils.py
tests/utils/: test_logging_utils.py
