[tool.poetry]
name = "bot-base"
version = "0.2.6"
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "*"
pydantic-settings = "^2.0.3"
openai = "^0.28.0"
loguru = "^0.7.2"
mongoengine = "^0.27.0"
pydub = "^0.25.1"
aiogram = "^3.0.0"
tiktoken = "*"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.1.0"
pytest = "^7.4.2"
pytest-mongodb = "^2.4.0"
aiogram-tests = "^1.0.3"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
