[tool.poetry]
name = "bot-base"
version = "0.3.2"  # add new components skeleton
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.*"
pydantic-settings = "^2.0.3"
openai = "^0.28.0"
loguru = "^0.7.2"
mongoengine = "^0.27.0"
pydub = "^0.25.1"
aiogram = "3.*"
tiktoken = "*"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
aiolimiter = "^1.1.0"
gpt-kit = { git = "https://github.com/calmmage/gpt-kit.git", branch = "gpt-engine" }
apscheduler = "*"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.1.0"
pytest = "^7.4.2"
pytest-mongodb = "^2.4.0"
aiogram-tests = "^1.0.3"
black = "*"
easydict = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
